--- a/src/app/additem/additem.component.html
+++ b/src/app/additem/additem.component.html
@@ -14,7 +14,7 @@
     <div class="fake-input" class="form-group">
         <label for="image">image:</label> &nbsp;
         <input type="text" />
-        <img src="http://www.zermatt-fun.ch/images/mastercard.jpg" width=25 />
+        <img src="https://www.pexels.com/photo/brown-hummingbird-selective-focus-photography-1133957/" width=25 />
     </div>
 
     <div class="form-group">
