--- a/src/app/sidebar/technology-stack/technology-stack.component.html
+++ b/src/app/sidebar/technology-stack/technology-stack.component.html
@@ -4,8 +4,59 @@
         <input type="text" class="form-control" id="title" placeholder="Enter title" title="title" >
         <br> <button class="btn btn-primary" >Add Title</button> 
     </div>
+
+
+    <div class="container-fluid">
+        <div class="row" style="margin-top: 80px;">        
+            <div class="col-md-2"></div>
+            <div class="col-md-6">
+                <h2 style="margin-bottom: 40px;">Technology Stack</h2>
+               <div class="row">
+                   
+                    <div class="table-2">
+                        <table width="100%">
+                        <tbody>
+                            
+                                <tr>
+                                    <td class="tdLeft"><strong>Backend</strong></td>
+                                    <td class="tdRight"><strong><span></span>JAVA, C++, C#  &nbsp; <button class="btn btn-primary">Add</button>&nbsp; <button class="btn btn-danger">Delete</button></strong></td>
+                                </tr>
+                              
+                                <tr>
+                                    <td class="tdLeft"><strong>Frontend</strong></td>
+                                    <td class="tdRight"><strong><span></span>Angular JS, React JS &nbsp; <button class="btn btn-primary">Add</button>&nbsp; <button class="btn btn-danger">Delete</button> </strong></td>
+                                </tr>
+                                <tr>
+                                    <td class="tdLeft"><strong>BI</strong></td>
+                                    <td class="tdRight"><strong><span></span>Power BI &nbsp; <button class="btn btn-primary">Add</button>&nbsp; <button class="btn btn-danger">Delete</button> </strong></td>
+                                </tr>
+                                <tr>
+                                    <td class="tdLeft"><strong>Tools</strong></td>
+                                    <td class="tdRight"><strong><span>Power BI</span> &nbsp; <button class="btn btn-primary">Add</button>&nbsp; <button class="btn btn-danger">Delete</button> </strong></td>
+                                </tr>
+                      
+                        </tbody>
+                        </table>
+                        </div>
+                     
+                  
+               </div>
+               
+            </div>
+            
+        </div>
+    </div>
+
+    <!-- <div class="row">
+        <div class="">
+
+        </div>
+        <div>
+
+        </div>
+    </div> -->
    
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-12">
             <table class="table">
                 <thead class="thead-dark">
@@ -31,8 +82,9 @@
                 </tbody>
             </table>
         </div>
-    </div>
+    </div> -->
 
-    <button class="btn btn-primary" (click)="onSubmit()" routerLinkActive="active">Add</button> 
+
+   
     
 </div>
