--- a/src/app/sidebar/technology-stack/technology-stack.component.css
+++ b/src/app/sidebar/technology-stack/technology-stack.component.css
@@ -3,3 +3,12 @@
     width: 250px; 
     height: 100%; 
 }
+.tdLeft {
+    border-right: 4px solid #656565;
+    border-bottom: 0px; width: 70px;
+    padding: 20px;
+}
+.tdRight{
+    border-bottom: 1px solid rgb(97, 94, 94);
+    padding: 20px;
+}
