--- a/src/app/sidebar/consultancy/consultancy.component.html
+++ b/src/app/sidebar/consultancy/consultancy.component.html
@@ -34,7 +34,7 @@
           <th scope="row">Gis(i)</th>
   
           <td>
-            <button type="button" class="btn btn-primary" (click)="onEdit(i)">Edit</button>     &nbsp;         
+            <button type="button" class="btn btn-primary" (click)="onEdit(i)">Show</button>     &nbsp;         
              <button type="button" class="btn btn-danger">Delete</button>
           </td>
       </tr> -->
