--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,9 +8,9 @@
     
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav">
-                <a href="#" class="nav-item nav-link active">Home</a>
+                <!-- <a href="#" class="nav-item nav-link active">Home</a>
                 <a href="#" class="nav-item nav-link">About</a>
-                <a href="#" class="nav-item nav-link">Products</a>
+                <a href="#" class="nav-item nav-link">Products</a> -->
             </div>
             <form class="form-inline ml-auto">
                 <input type="text" class="form-control mr-sm-2" placeholder="Search">
