--- a/src/app/sidebar/technology-stack/technology-stack.component.html
+++ b/src/app/sidebar/technology-stack/technology-stack.component.html
@@ -1,87 +1,108 @@
-<div class="container">
-    <div class="form-group">
-        <label for="title">Title:</label>
+
+     <!-- <div [formGroup]="test">
+       <label for="title">Title:</label>
         <input type="text" class="form-control" id="title" placeholder="Enter title" title="title" >
-        <!-- <br> <button class="btn btn-primary" >Add Title</button>  -->
-    </div>
-
-
-    <div class="container-fluid">
-        <div class="row" style="margin-top: 80px;">        
-            <div class="col-md-2"></div>
-            <div class="col-md-6">
-                <h2 style="margin-bottom: 40px;">Technology Stack</h2>
-               <div class="row">
-                   
-                    <div class="table-2">
-                        <table width="100%">
-                        <tbody>
-                            
-                                <tr>
-                                    <td class="tdLeft"><strong>Backend</strong></td>
-                                    <td class="tdRight"><strong><span></span>JAVA, C++, C#  &nbsp; <button class="btn btn-primary float-right" (click)="onUpdateTech()">Update</button>&nbsp; </strong></td>
-                                </tr>
-                              
-                                <tr>
-                                    <td class="tdLeft"><strong>Frontend</strong></td>
-                                    <td class="tdRight"><strong><span></span>Angular JS, React JS &nbsp; <button class="btn btn-primary float-right" (click)="onUpdateTech()" >Update</button>&nbsp; </strong></td>
-                                </tr>
-
-                                <tr>
-                                    <td class="tdLeft"><strong>BI</strong></td>
-                                    <td class="tdRight"><strong><span></span>Power BI &nbsp; <button class="btn btn-primary float-right" (click)="onUpdateTech()" >Update</button>&nbsp;</strong></td>
-                                </tr>
-
-                                <tr>
-                                    <td class="tdLeft"><strong>Tools</strong></td>
-                                    <td class="tdRight"><strong><span>Power BI</span> &nbsp; <button class="btn btn-primary float-right" (click)="onUpdateTech()" >Update</button>&nbsp;  </strong></td>
-                                </tr>
-                      
-                        </tbody>
-                        </table>
-                        </div>
-                     
-                  
-               </div>
-               
-            </div>
-            
-        </div>
-    </div>
-
-    <!-- <div class="row">
-        <div class="">
-
-        </div>
-        <div>
-
-        </div>
-    </div> -->
+        <br> <button class="btn btn-primary" >Add Title</button>  -->
    
-    <!-- <div class="row">
-        <div class="col-12">
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">Backend</th>
-                        <th scope="col">Frontend</th>
-                        <th scope="col">BI</th>
-                        <th scope="col">Tools</th>
-                        <th scope="col">Add/Delete</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let d of data">
-                        <td>{{d.id}}</td>
-                        <td>{{d.backend}}</td>
-                        <td>{{d.frontend}}</td>
-                        <td>{{d.bI}}</td>
-                        <td>{{d.tools}}</td>
-                        <td> <button class="btn btn-primary">Add</button> &nbsp;<button class="btn btn-danger" (click)="onDelete(d.id)">Delete</button></td>
-                    </tr>
-                </tbody>
-            </table>
+
+        <!-- <br>
+        
+    
+    </div>   
+        <br>
+        <div class="form-group">  
+            <div class="col-md-offset-2 col-md-4">  
+                <button type="button" class="btn btn-primary" (click)="addButtonClick()">  
+                    Add Other Details  
+                </button>  
+            </div>  
+        </div> 
+         </div> -->
+
+        
+        <!-- <div formArrayName="other" *ngFor="let other of fb.get('other').controls; let i = index" class="form-group">   -->
+ <div class="container">       
+    <br>    
+    <form [formGroup]="myGroup">
+
+        
+            <div class="row">
+                <div class="col-md-2 bg-secondary">Backend:</div> 
+        
+                <div class="form-group" class="col-md-10">
+                    <input type="text" formControlName="backend" >
+                </div>
+            </div> 
+            
+            <br>
+            <div class="row">
+                <div class="col-md-2 bg-secondary">Frontend:</div>
+        
+                <div class="form-group" class="col-md-10">
+                    <input type="text" formControlName="frontend" >
+                </div>
+            </div>  
+            
+            <br>
+            <div class="row">
+                <div class="col-md-2 bg-secondary">BI:</div>
+        
+                <div class="form-group" class="col-md-10">
+                    <input type="text" formControlName="bi" >
+                </div>
+            </div> 
+
+        <br>
+        <div class="row">
+            <div class="col-md-2 bg-secondary">Tools:</div>
+    
+            <div class="form-group" class="col-md-10">
+                <input type="text" formControlName="tools" >
+            </div>
         </div>
-    </div> -->
+
+        <br>
+        
+        <div formArrayName="aliases">
+            <h2>Aliases</h2> <button (click)="addAlias()">Add Alias</button>
+            <br>
+            <div *ngFor="let alias of aliases.controls; let i=index"> 
+              <div class="row">   
+                <div class="col-md-2 bg-secondary">Alias:</div>
+                <div class="form-group" class="col-md-10">
+                    <input type="text" [formControlName]="i" >
+                </div>
+            </div>
+        </div>
+        </div>
+        
+    </form>
+    
+       
+
+    <br>
+    <div class ="row"> 
+        <div  class="col-md-3">  
+            <select [(ngModel)]= 'techSelected' (ngModelChange)= 'onTechSelected($event)'
+                    class="browser-default custom-select" >
+                <option *ngFor ="let tec of techs" [ngValue] ="tec">
+                     {{tec.techName}}
+                </option>
+
+            </select>    
+                        
+                        {{techSelected.techId}}
+        </div> 
+                  
+        <div class="col-md-9">  
+                 <input type="text"  id="new item" placeholder="new item" [(ngModel)]="techSelected.techName" > &nbsp;
+                 <button class="btn btn-primary" (click)="addItem()">Add Item</button>
+         </div>   
+  
+    </div>  
+                
 </div>
+         
+     
+
+
