--- a/src/app/sidebar/technology-stack/technology-stack.component.html
+++ b/src/app/sidebar/technology-stack/technology-stack.component.html
@@ -1,36 +1,14 @@
 
-     <!-- <div [formGroup]="test">
-       <label for="title">Title:</label>
-        <input type="text" class="form-control" id="title" placeholder="Enter title" title="title" >
-        <br> <button class="btn btn-primary" >Add Title</button>  -->
-   
-
-        <!-- <br>
-        
-    
-    </div>   
-        <br>
-        <div class="form-group">  
-            <div class="col-md-offset-2 col-md-4">  
-                <button type="button" class="btn btn-primary" (click)="addButtonClick()">  
-                    Add Other Details  
-                </button>  
-            </div>  
-        </div> 
-         </div> -->
-
-        
-        <!-- <div formArrayName="other" *ngFor="let other of fb.get('other').controls; let i = index" class="form-group">   -->
  <div class="container">       
     <br>    
     <form [formGroup]="myGroup">
 
         
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-2 bg-secondary">Backend:</div> 
         
                 <div class="form-group" class="col-md-10">
-                    <input type="text" formControlName="backend" >
+                    <input type="text" formControlName="backend" placeholder="backend" >
                 </div>
             </div> 
             
@@ -39,7 +17,7 @@
                 <div class="col-md-2 bg-secondary">Frontend:</div>
         
                 <div class="form-group" class="col-md-10">
-                    <input type="text" formControlName="frontend" >
+                    <input type="text" formControlName="frontend" placeholder="frontend">
                 </div>
             </div>  
             
@@ -48,7 +26,7 @@
                 <div class="col-md-2 bg-secondary">BI:</div>
         
                 <div class="form-group" class="col-md-10">
-                    <input type="text" formControlName="bi" >
+                    <input type="text" formControlName="bi" placeholder="bi" >
                 </div>
             </div> 
 
@@ -57,33 +35,35 @@
             <div class="col-md-2 bg-secondary">Tools:</div>
     
             <div class="form-group" class="col-md-10">
-                <input type="text" formControlName="tools" >
+                <input type="text" formControlName="tools" placeholder="tools" >
             </div>
-        </div>
+        </div> -->
 
         <br>
         
-        <div formArrayName="aliases">
-            <h2>Aliases</h2> <button (click)="addAlias()">Add Alias</button>
-            <br>
-            <div *ngFor="let alias of aliases.controls; let i=index"> 
-              <div class="row">   
-                <div class="col-md-2 bg-secondary">Alias:</div>
-                <div class="form-group" class="col-md-10">
-                    <input type="text" [formControlName]="i" >
+        <div formArrayName="streamsTech">
+            <!-- <h2>Form</h2>   -->    
+            <!-- <button (click)= "addStreamsTech() " >Add Form</button>  -->
+            <div *ngFor = "let d of data ;let p = index"> 
+                <div *ngFor="let alias of streamsTech.controls; let i=index"> 
+                    <div class="row">   
+                        <div class="col-md-2 bg-secondary">{{d.Name}}</div>
+                        
+                        <div class="form-group" class="col-md-10">
+                            <input type="text" [formControlName]="i" placeholder="{{d.Description}}" > 
+                        </div>
+                    </div>
+                    <br>
                 </div>
             </div>
+           
         </div>
-        </div>
-        
-    </form>
-    
-       
+     </form>   
 
     <br>
     <div class ="row"> 
         <div  class="col-md-3">  
-            <select [(ngModel)]= 'techSelected' (ngModelChange)= 'onTechSelected($event)'
+            <select [(ngModel)] ="techSelected" (ngModelChange)= 'onTechSelected($event)'
                     class="browser-default custom-select" >
                 <option *ngFor ="let tec of techs" [ngValue] ="tec">
                      {{tec.techName}}
@@ -95,8 +75,8 @@
         </div> 
                   
         <div class="col-md-9">  
-                 <input type="text"  id="new item" placeholder="new item" [(ngModel)]="techSelected.techName" > &nbsp;
-                 <button class="btn btn-primary" (click)="addItem()">Add Item</button>
+                 <input type="text"  placeholder="new item" [(ngModel)]="val"> &nbsp;
+                 <button class="btn btn-primary" (click)="addItem(techSelected.techId)">Add Item</button>
          </div>   
   
     </div>  
